--- a/_posts/.2014-08-13-post.md
+++ b/_posts/.2014-08-13-post.md
@@ -5,8 +5,8 @@ cover: cover.jpg
 date:   2014-08-13 12:00:00
 categories: posts
 tags:
-    - top
-    - archive
+    top
+    archive
 ---
 
 ## Title 
