Pushing before I fall asleep Started adding project52 posts for backlog Recreating them as faithfully as possible Got through first three

--- a/_posts/2014-02-11-project1.md
+++ b/_posts/2014-02-11-project1.md
@@ -6,13 +6,14 @@ cover:      cover.jpg
 date:       2014-02-11 12:00:00
 categories: p52
 tags:       archive backlog project52
+snippet:    A few years ago got a lot of publicity by doing a project called in which he produced a projec...
 
 ---
+ 
 
-The Rules
----------
+A few years ago [Johnathan Coulton](http://goo.gl/lMpIop) got a lot of publicity by doing a project called ["Thing A Week"](http://goo.gl/cBgkzD) in which he produced and published a new song every single week. Being a musician this helped him develop as an artist as well has helped get his name out on the internet. He wrote arguably the most popular song in gaming ['Still Alive'](http://youtu.be/Y6ljFaKRTrI) which geeks abound sing loud, proud, and way out of tune to this day when they're in a good mood.
 
-A few years ago [Johnathan Coulton](http://goo.gl/lMpIop) got a lot of publicity by doing a project called ["Thing A Week"](http://goo.gl/cBgkzD) in which he produced and published a new song every single week. Being a musician this helped him develop as an artist as well as <!--more--> helped get his name out on the internet. He wrote arguably the most popular song in gaming ['Still Alive'](http://youtu.be/Y6ljFaKRTrI) which geeks abound sing loud, proud, and way out of tune to this day when they're in a good mood.
+<!--more-->
 
 I can't hope to become as famous as J.C., but I also can't see any harm in *doing my own 'Think A Week'*, if for no other reason than that it will give me something constructive and awesome to do in my spare-time.
 
