Masive update - added entire project backlog

--- a/_posts/2014-02-11-project1.md
+++ b/_posts/2014-02-11-project1.md
@@ -6,7 +6,7 @@ cover:      cover.jpg
 date:       2014-02-11 12:00:00
 categories: p52
 tags:       archive backlog project52
-snippet:    A few years ago got a lot of publicity by doing a project called in which he produced a projec...
+snippet:    A few years ago Johnathan Coulton got a lot of publicity by doing a project called in which he pro...
 
 ---
  
