--- a/_posts/2014-02-27-project3.md
+++ b/_posts/2014-02-27-project3.md
@@ -6,7 +6,7 @@ cover:      cover.jpg
 date:       2014-02-27 12:00:00
 categories: p52
 tags:       archive backlog project52
-snippet:    tmpsnpt 
+snippet:    Pre-Project Bonus- This Week I did a few bonus projects- The code for this website is now in a repo...
 
 ---
 
@@ -33,20 +33,16 @@ It's called a Raspberry Pi, and it's a credit-card sized mini computer designed 
 
 The RasPi has these things called General Purpose Input/Output pins (GPIO) which can be used for recording data and triggering electronics through the RasPi. These are the major difference between a RasPi and a 'normal' computer. 
 
+A few weeks ago I acquired some LED's... 
+
 <a href="http://en.wikipedia.org/wiki/Light-emitting_diode">
     <img src="http://upload.wikimedia.org/wikipedia/commons/f/f9/LED%2C_5mm%2C_green_%28en%29.svg" width="50%">
 </a>
 
-A few weeks ago I acquired some LED's... 
+... Jumper Wires... 
 
 <a href="http://en.wikipedia.org/wiki/Jump_wire">
     <img src="http://upload.wikimedia.org/wikipedia/commons/5/5c/A_few_Jumper_Wires.jpg" width="70%">
-</a>
-
-... Jumper Wires... 
-
-<a href="http://en.wikipedia.org/wiki/Breadboard">
-    <img src="http://upload.wikimedia.org/wikipedia/commons/7/73/400_points_breadboard.jpg" width="70%">
 </a>
 
 ... and a Bread Board. 
