Added some custom post cover images

--- a/_posts/2014-03-08-project4.md
+++ b/_posts/2014-03-08-project4.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      dogs are a lot like programming languages...
-cover:      cover.jpg
+cover:      dachshund.png 
 date:       2014-03-08 12:00:00
 categories: p52
 tags:       archive backlog project52
