--- a/_posts/2014-04-06-project8.md
+++ b/_posts/2014-04-06-project8.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      My First Chrome Extension  
-cover:      cover.jpg
+cover:      chromePlugin.png 
 date:       2014-04-06 12:00:00
 categories: p52
 tags:       archive backlog project52
