--- a/_posts/2014-04-13-project9.md
+++ b/_posts/2014-04-13-project9.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      Blender BarCamp Talk 
-cover:      cover.jpg
+cover:      barcamp.png 
 date:       2014-04-13 12:00:00
 categories: p52
 tags:       archive backlog project52
