--- a/_posts/2014-05-18-project13.md
+++ b/_posts/2014-05-18-project13.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      An Analysis of Failure 
-cover:      cover.jpg
+cover:      workout.png 
 date:       2014-05-18 12:00:00
 categories: p52
 tags:       archive backlog project52
