--- a/_posts/2014-05-25-project14.md
+++ b/_posts/2014-05-25-project14.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      A Simple Cauldron Scene 
-cover:      cover.jpg
+cover:      bowlFinalRender.png 
 date:       2014-05-25 12:00:00
 categories: p52
 tags:       archive backlog project52
