--- a/_posts/2014-06-08-project16.md
+++ b/_posts/2014-06-08-project16.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      Personal Countdown Timer 
-coves:      cover.jpg
+coves:      countdownClock.png 
 date:       2014-05-25 12:00:00
 categories: p52
 tags:       archive backlog project52
