--- a/_posts/2014-02-27-project3.md
+++ b/_posts/2014-02-27-project3.md
@@ -2,7 +2,7 @@
 
 layout:     post
 title:      The Raspberry Pi Binary Clock 
-cover:      cover.jpg
+cover:      piClock.png 
 date:       2014-02-27 12:00:00
 categories: p52
 tags:       archive backlog project52
